test/samples/invalid/passVariableFromProcess.ygl
node Node1 {
process {
    int x = 3;
}
}

node Node2 {
process {
    int y;
}
}

Node1.process.x -> Node2.process.y;